--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>Bootstrap working</h2>
-    </div>
-  </div>
-</div>
+<app-header></app-header>
+
+<p>app component working</p>
