--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,9 +1,9 @@
 <p>recipes works!</p>
-<div class="row">
-  <div class="col-md-5">
-    COL5
+<div class="row justify-content-center">
+  <div class="col-4">
+    One of two columns
   </div>
-  <div class="colmd-7">
-    COL7
+  <div class="col-4">
+    One of two columns
   </div>
 </div>
