--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,13 @@
-<app-header></app-header>
 <div class="container">
-  <div class="row">
+<app-header></app-header>
+
+  <div class="row justify-content-start">
     <div class="col-md-12">
       <app-recipes></app-recipes>
       <app-shopping-list></app-shopping-list>
     </div>
   </div>
-</div>
+
 <p>app works!</p>
+
+</div>
