--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -2,8 +2,10 @@
 <div class="row justify-content-center">
   <div class="col-4">
     One of two columns
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-4">
     One of two columns
+    <app-recipe-details></app-recipe-details>
   </div>
 </div>
