--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,8 @@
   <!-- Navbar content -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar scroll</a>
+      <a class="navbar-brand" href="#">Recipe Book</a>
+      <!-- -->
       <button
         class="navbar-toggler"
         type="button"
@@ -15,6 +16,7 @@
       >
         <span class="navbar-toggler-icon"></span>
       </button>
+      <!-- -->
       <div class="collapse navbar-collapse" id="navbarScroll">
         <ul
           class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
