--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,33 +1,25 @@
-
 <div class="container">
+  
   <!-- Navbar content -->
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Recipe Book</a>
+      <div class="navbar header">
+        <a class="navbar-brand" href="#">Recipe Book</a>
+      </div>
       <!-- -->
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarScroll"
-        aria-controls="navbarScroll"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <!-- -->
-      <div class="collapse navbar-collapse" id="navbarScroll">
-        <ul
-          class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll"
-          style="--bs-scroll-height: 100px"
-        >
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link" href="#">Recipes</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#">Shopping List</a>
           </li>
+        </ul>
+        <!-- -->
+        <div class="me-auto"></div>
+        <!-- -->
+        <ul class="nav navbar-nav">
           <li class="nav-item dropdown">
             <a
               class="nav-link dropdown-toggle"
@@ -36,30 +28,14 @@
               data-bs-toggle="dropdown"
               aria-expanded="false"
             >
-              Link
+              Manage
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider" /></li>
-              <li>
-                <a class="dropdown-item" href="#">Something else here</a>
-              </li>
+              <li><a class="dropdown-item" href="#">Save Data</a></li>
+              <li><a class="dropdown-item" href="#">Fetch Data</a></li>
             </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Link</a>
-          </li>
         </ul>
-        <form class="d-flex" role="search">
-          <input
-            class="form-control me-2"
-            type="search"
-            placeholder="Search"
-            aria-label="Search"
-          />
-          <button class="btn btn-outline-success" type="submit">Search</button>
-        </form>
       </div>
     </div>
   </nav>
